# safemon-yocto

./: .gitattributes  .gitignore  CREDITS.md  README.md  app-build.sh  kas-config.yml  kas-jetson.yml  kas-qemu.yml
safemon/: CMakeLists.txt
safemon/cmake/: dependencies.cmake  platform.cmake
safemon/inc/: can_header.h  drm_helper.h  egl_helper.h  fault_detector.h  gl_app.h  grpc_server.h
safemon/inc/display/: axis_gizmo.h  camera.h  dashboard.h  drm_helper.h  egl_helper.h  glass_panel.h  text_renderer.h  waterfall_chart.h  waterfall_data.h
safemon/inc/legacy/: framebuffer.h
safemon/inc/services/: can_reader.h
safemon/lib/: CMakeLists.txt  Dockerfile  docker-compose.yml
safemon/lib/can_bridge/: CMakeLists.txt
safemon/lib/can_bridge/inc/: can_bridge.h  can_reader.h  ican_reader.h
safemon/lib/can_bridge/src/: can_bridge.cpp  can_reader.cpp
safemon/lib/can_bridge/test/: CMakeLists.txt  test_can_bridge.cpp
safemon/lib/common/: CMakeLists.txt
safemon/lib/common/inc/: dashboard_state.h  frame_store.h  redis_client.h
safemon/lib/config/: CMakeLists.txt
safemon/lib/config/inc/: config.h
safemon/lib/config/src/: config.cpp
safemon/lib/config/test/: CMakeLists.txt  test_config.cpp
safemon/lib/display_reader/: CMakeLists.txt
safemon/lib/display_reader/inc/: display_reader.h
safemon/lib/display_reader/src/: display_reader.cpp
safemon/lib/display_reader/test/: CMakeLists.txt  test_display_reader.cpp
safemon/lib/ecdsa/: CMakeLists.txt  Dockerfile  docker-compose.yml
safemon/lib/ecdsa/inc/: bigint.h  ec_point.h  ecdsa.h  ecdsa_verify_file.h
safemon/lib/ecdsa/src/: bigint.cpp  ec_point.cpp  ecdsa.cpp  ecdsa_verify_file.cpp
safemon/lib/ecdsa/test/: CMakeLists.txt  test_bigint.cpp  test_ec_point.cpp  test_ecdsa.cpp
safemon/lib/fault_detector/: CMakeLists.txt
safemon/lib/fault_detector/inc/: fault_detector.h  fault_rules.h  redis_client_impl.h
safemon/lib/fault_detector/src/: fault_detector.cpp  fault_rules.cpp  redis_client_impl.cpp
safemon/lib/fault_detector/test/: CMakeLists.txt  test_fault_detector.cpp  test_fault_rules.cpp
safemon/lib/grpc_server/: CMakeLists.txt
safemon/lib/grpc_server/inc/: fault_event_builder.h  grpc_server.h
safemon/lib/grpc_server/src/: fault_event_builder.cpp  grpc_server.cpp
safemon/lib/grpc_server/test/: CMakeLists.txt  test_grpc_server.cpp
safemon/lib/input/: CMakeLists.txt
safemon/lib/input/inc/: evdev_keyboard.h  evdev_mouse.h  iinput_device.h  input_event_types.h  input_manager.h
safemon/lib/input/src/: evdev_keyboard.cpp  evdev_mouse.cpp  input_manager.cpp
safemon/lib/input/test/: CMakeLists.txt  test_evdev_keyboard.cpp  test_input_event_types.cpp  test_input_manager.cpp
safemon/lib/input/tests/: CMakeLists.txt  test_evdev_mouse.cpp
safemon/proto/: fault.grpc.pb.cc  fault.grpc.pb.h  fault.pb.cc  fault.pb.h  fault.proto  fault_pb2.py  fault_pb2_grpc.py
safemon/src/: can_reader.cpp  drm_display.cpp  drm_helper.cpp  drm_test.cpp  egl_helper.cpp  egl_helper_wayland.cpp  egl_triangle.cpp  fault_detector.cpp  framebuffer.cpp  gl_app.cpp  gl_display.cpp  main.cpp  safemon_display.cpp
safemon/src/display/: axis_gizmo.cpp  camera.cpp  dashboard.cpp  drm_helper.cpp  egl_helper_gbm.cpp  egl_helper_wayland.cpp  gl_app.cpp  glass_panel.cpp  safemon_chart.cpp  safemon_display.cpp  text_renderer.cpp  waterfall_chart.cpp  waterfall_data.cpp
safemon/src/legacy/: egl_triangle.cpp  framebuffer.cpp
safemon/src/services/: can_reader.cpp  grpc_server.cpp  safemon_app.cpp
safemon/tools/fault-client/: fault_client.py
safemon/tools/safemon-gui/: main.py  requirements-dev.txt  requirements.txt
safemon/tools/safemon-gui-csharp/: .gitignore  SafemonGui.sln
safemon/tools/safemon-gui-csharp/SafemonGui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SafemonGui.csproj
safemon/tools/safemon-gui-csharp/SafemonGui.Tests/: SafemonGui.Tests.csproj
safemon/tools/safemon-gui-csharp/SafemonGui.Tests/Unit/: ConfigManagerTests.cs  EcdsaTests.cs  SshManagerTests.cs
safemon/tools/safemon-gui-csharp/SafemonGui/Converters/: AutoRefreshLabelConverter.cs  BoolToVisibilityConverter.cs  ConnectionStatusBrushConverter.cs  ConnectionStatusConverter.cs  FaultStatusToBrushConverter.cs  InverseBoolConverter.cs  ServiceStatusToBrushConverter.cs  SidebarWidthConverter.cs
safemon/tools/safemon-gui-csharp/SafemonGui/Core/: ConfigManager.cs  GrpcFaultClient.cs  SshManager.cs
safemon/tools/safemon-gui-csharp/SafemonGui/Crypto/: ECPoint.cs  Ecdsa.cs  KeyFileFormat.cs  Secp256k1.cs
safemon/tools/safemon-gui-csharp/SafemonGui/Models/: AppSettings.cs  DeviceFileEntry.cs  FaultEvent.cs  KeyPair.cs  PlatformConfig.cs  ServiceCheckResult.cs
safemon/tools/safemon-gui-csharp/SafemonGui/Themes/: Colors.xaml  Styles.xaml
safemon/tools/safemon-gui-csharp/SafemonGui/ViewModels/: DeviceFilesViewModel.cs  DeviceStatusViewModel.cs  FaultMonitorViewModel.cs  KeyManagementViewModel.cs  MainWindowViewModel.cs  SettingsViewModel.cs  SignVerifyViewModel.cs
safemon/tools/safemon-gui-csharp/SafemonGui/Views/Pages/: DeviceFilesPage.xaml  DeviceFilesPage.xaml.cs  DeviceStatusPage.xaml  (+9 more)
safemon/tools/safemon-gui/config/: app.json  device_files.json  jetson_orin_nano.json  qemu.json  raspberry_pi.json
safemon/tools/safemon-gui/core/: config_manager.py  device_session.py  ssh_manager.py  workers.py
safemon/tools/safemon-gui/tests/: conftest.py
safemon/tools/safemon-gui/tests/integration/: test_device_files.py  test_device_status.py  test_key_management.py
safemon/tools/safemon-gui/tests/unit/: test_config_manager.py  test_fault_monitor.py  test_sign_verify.py  test_ssh_manager.py  test_workers.py
safemon/tools/safemon-gui/ui/: device_files.py  device_status.py  device_topbar.py  fault_monitor.py  key_management.py  main_window.py  sign_verify.py
safemon/tools/safemon-gui/ui/backend/: device_files_backend.py  device_status_backend.py  fault_monitor_backend.py  key_management_backend.py  settings_backend.py  sign_verify_backend.py
safemon/tools/safemon-gui/ui/qml/: main.qml
safemon/tools/safemon-sign/: safemon_sign.py
(+57 files in other folders)
